--- a/css/components/progress-bar.css
+++ b/css/components/progress-bar.css
@@ -1,19 +1,14 @@
 .progess-bar {
-    display: inline-block;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 .progress-bar > .top {
-    display: inline-block;
-    width: 100%;
-    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
 }
-.progress-bar > .top > .title {
-    float: left;
-}
-.progress-bar > .top > .value {
-    float: right;
-}
+
 .progress-bar > .bottom {
     display: inline-block;
     width: 100%;
