--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -1,31 +1,41 @@
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 .container {
-    display: inline-block;
-    width: 100%;
-    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
     padding: 60px 0;
 
 }
 
 .container > .row {
-    float: left;
+    display: flex;
     width: 800px;
-    margin: 0 calc(50% - 400px);
+    justify-content: space-between;
 }
 
 .container > .row-short {
-    float: left;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     width: 600px;
-    margin-left: calc(50% - 300px);
 }
 
 .container .left {
-    float: left;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     width: 50%;
-    margin-right: 10%;
 }
 
 .container .right {
-    float: left;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     width: 40%;
 }
 
@@ -33,20 +43,26 @@
 @media (max-width: 900px) {
     .container > .row {
         width: 600px;
-        margin: 0 calc(50% - 300px);
 }
 }
 
 @media (max-width: 700px) {
-    .container > .row-short,
+    .container > .row-short {
+        flex-direction: column;
+        width: 400px;
+    }
     .container > .row {
         width: 400px;
-        margin: 0 calc(50% - 200px);
+        gap: 50px;
+
+    }
+
+    main.container > .row {
+        flex-direction: column;
     }
 
     .container .left {
         width: 100%;
-        margin: 0 0 60px;
     }
     
     .container .right {
@@ -56,13 +72,13 @@
 
 @media (max-width: 460px) {
     .container {
-        padding-left: 30px;
-        padding-right: 30px;
+        padding-left: 20px;
+        padding-right: 20px;
+        width: 100%;
     }
 
     .container > .row-short,
     .container > .row {
         width: 100%;
-        margin-left: 0;
 }
 }
