--- a/css/components/form.css
+++ b/css/components/form.css
@@ -1,14 +1,8 @@
 .form {
-    display: inline-block;
-    width: 100%;
-}
-
-.form > * {
-    margin-bottom: 20px;
-}
-
-.form > *:last-child {
-    margin-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
 }
 
 .form > label {
@@ -18,7 +12,6 @@
 .form > .input {
     width: 100%;
     padding: 0.5em 0;
-    float: left;
     font-size: 15px;
     line-height: 1.5em;
     background-color: transparent;
